CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT (hap_audio_openal)

FIND_PACKAGE(OpenAL REQUIRED)
INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
IF(NOT OpenAL_FOUND)
    MESSAGE(FATAL_ERROR "OpenAL must be available in order to build this module.")
ENDIF(NOT OpenAL_FOUND)

FILE(GLOB_RECURSE HAP_AUDIO_OPENAL_HEADERS src/*.h)
FILE(GLOB HAP_AUDIO_OPENAL_SOURCES src/*.c)

ADD_LIBRARY(hap_audio_openal SHARED ${HAP_AUDIO_OPENAL_SOURCES} ${HAP_AUDIO_OPENAL_HEADERS})
TARGET_LINK_LIBRARIES(hap_audio_openal PRIVATE ${OPENAL_LIBRARY})